chore: fix annoying spacing between text tags

--- a/src/sass/abstracts/_typography.scss
+++ b/src/sass/abstracts/_typography.scss
@@ -20,7 +20,7 @@ body {
 
 h1, h2, h3,
 h4, h5, h6 {
-    --spacing: var(--md);
+    --spacing: var(--lg);
     margin-bottom: var(--spacing);
 }
 
@@ -32,6 +32,14 @@ p {
     font-weight: var(--font-weight);
 
     &:not(:last-child) {
-        margin-bottom: var(--sm);
+        margin-bottom: var(--lg);
     }
+}
+
+code {
+    --font-family: monospace;
+    --bg: var(--foreground-secondary)
+
+    font-family: var(--font-family);
+    background-color: var(--bg);
 }
